[workspace]
resolver = "2"
members = ["macros"]

[workspace.package]
license = "MIT"
version = "1.1.0"

[package]
name = "literateink-utilities"
version.workspace = true
authors = ["LiterateInk <contact@literate.ink>"]
documentation = "https://docs.literate.ink/utilities"
repository = "https://github.com/LiterateInk/Utilities"
description = "A general crate containing utilities for helping building our libraries."
edition = "2021"
license.workspace = true

[dependencies]
futures = "0.3.17"
reqwest = "0.11.15"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.63"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
