[workspace]
resolver = "2"
members = ["wasm", "fetcher", "fetcher-macros"]

[workspace.package]
version = "0.1.1"
description = "Utilities for the LiterateInk crates."
homepage = "https://docs.literate.ink/utilities"
license = "MIT"
repository = "https://github.com/LiterateInk/Utilities"

[workspace.metadata.release]
pre-release-commit-message = "chore: bump rust versions"
