[workspace]
resolver = "2"
members = ["wasm", "fetcher"]

[workspace.package]
version = "0.1.9"
description = "Utilities for the LiterateInk crates."
homepage = "https://docs.literate.ink/utilities"
license = "MIT"
repository = "https://github.com/LiterateInk/Utilities"

[workspace.metadata.release]
pre-release-commit-message = "chore: bump rust versions"
