[package]
name = "literateink-fetcher-macros"
version.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
fetcher = { package = "literateink-fetcher", version = "0.1", path = "../fetcher" }
tokio = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true
