[package]
name = "literateink-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
http = "1.2"
url = "2.5"
fetcher-macros = { package = "literateink-fetcher-macros", version = "0.1", path = "../fetcher-macros" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.12"
