[package]
name = "literateink-fetcher"
version.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
http = "1.2"
url = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = "0.12"
