[package]
name = "literateink-utilities-macros"
version.workspace = true
edition = "2021"
repository = "https://github.com/LiterateInk/Utilities"
description = "A general crate containing macros for helping building our libraries."
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.72"
