[package]
name = "literateink-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"

[dev-dependencies]
wasm = { package = "literateink-wasm" }
wasm-bindgen = "0.2"
thiserror = "2"
js-sys = "0.3"

[lib]
proc-macro = true
