[package]
name = "literateink-wasm"
version.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"

[dev-dependencies]
wasm-bindgen = "0.2"
thiserror = "2"
js-sys = "0.3"
fetcher = { package = "literateink-fetcher", version = "0.1", path = "../fetcher" }

[lib]
proc-macro = true
